@@ -13,7 +13,7 @@
  <body>
    <div id="title">
      <h1>Regole per la buona traduzione</h1>
-     <p><a href="http://81100.eu.org/em/">Emanuele Aina</a></p>
+     <p><a href="http://nerd.ocracy.org/em/">Emanuele Aina</a></p>
    </div>
    
    <div id="intro">
@@ -466,7 +466,7 @@
      l'utente.</p>
      <p>Oltre alla lettura delle traduzioni di programmi e documenti relativi
      all'oggetto della traduzione è possibile consultare guide apposite come
-     il <a href="http://81100.eu.org/em/glossario/glossario.html"
+     il <a href="http://nerd.ocracy.org/em/glossario/glossario.html"
      title="Il glossario">glossario dei traduttori di programmi liberi</a> o,
      se si stessero traducendo elementi di una interfaccia grafica,
      le <a href="http://www.firenze.linux.it/~algol/linee-guida/"
@@ -500,7 +500,7 @@
      <a href="http://validator.w3.org/check/referer">Valid XHTML 1.0 Strict</a>
      </div>
      <div>
-     <a href="http://81100.eu.org/em/">Emanuele Aina</a> - 
+     <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a> - 
      Thu, 24 Feb 2005 15:58:02 +0100
      </div>
    </div>
