@@ -152,7 +152,7 @@
      liberi</a> da <a href="mailto:elle.uca@infinito.it">Luca Ferretti</a>
      e successivamente convertito in 
      <acronym title="eXtensible Hyper Text Markup Language">XHTML</acronym>
-     da <a href="http://81100.eu.org/em/">Emanuele Aina</a>.</p>
+     da <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a>.</p>
    </div>
 
    <div id="copyright">
@@ -163,7 +163,7 @@
      <a href="http://validator.w3.org/check/referer">Valid XHTML 1.0 Strict</a>
      </div>
      <div>
-     <a href="http://81100.eu.org/em/">Emanuele Aina</a> - Sun, 06 Feb 2005 14:31:17 +0100
+     <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a> - Sun, 06 Feb 2005 14:31:17 +0100
      </div>
    </div>
 
