@@ -1678,7 +1678,7 @@
      <a href="http://validator.w3.org/check/referer">Valid XHTML 1.0 Strict</a>
      </div>
      <div>
-     <a href="http://81100.eu.org/em/">Emanuele Aina</a> - Mon, 22 Aug 2005 23:33:59 +0200
+     <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a> - Mon, 22 Aug 2005 23:33:59 +0200
      </div>
    </div>
  </body>
