@@ -99,7 +99,7 @@
     oltre ad essere l'autore della traduzione di glibc e varie
     altre. &Egrave; l'unico ad avere un ruolo particolare all'interno
     della lista. Il glossario, prima mantenuto da Marco, è ora gestito
-    da <a href="http://81100.eu.org/em/">Emanuele Aina</a>,
+    da <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a>,
     il quale, seguendo l'esempio del predecessore, inserisce nel documento
     ufficiale le traduzioni che durante la discussione raggiungono il 
     <i>rough consensus</i>, secondo la migliore tradizione delle liste di
@@ -150,13 +150,13 @@
           </li>
 
           <li>
-            <a href="http://81100.eu.org/em/glossario/glossario.html">
-            http://81100.eu.org/em/glossario/glossario.html
+            <a href="http://nerd.ocracy.org/em/glossario/glossario.html">
+            http://nerd.ocracy.org/em/glossario/glossario.html
             </a>
           </li>
         </ul>
 
-      <p>Dal <a href="http://81100.eu.org/em/">sito di Emanuele</a>
+      <p>Dal <a href="http://nerd.ocracy.org/em/">sito di Emanuele</a>
       è ancora possibile, per chi fosse interessato, scaricare la 
       <a href="ftp://ftp.linux.it/pub/People/md/glossario.tgz">vecchia edizione
       del glossario</a> redatta da Marco d'Itri.</p>
@@ -172,8 +172,8 @@
       <ul>
         <li><a href="buona_traduzione.html">
         http://www.linux.it/tp/buona_traduzione.html</a></li>
-        <li><a href="http://81100.eu.org/em/buona_traduzione.html">
-        http://81100.eu.org/em/buona_traduzione.html</a></li>
+        <li><a href="http://nerd.ocracy.org/em/buona_traduzione.html">
+        http://nerd.ocracy.org/em/buona_traduzione.html</a></li>
       </ul>
       </dd>
 
