@@ -118,7 +118,7 @@
     title="La pagina ufficiale della lista dei traduttori">lista dei
     traduttori</a> da Cristian Rigamonti ed è stato convertito in <acronym 
     title="eXtensible HyperText Markup Language">XHTML</acronym> da
-    <a href="http://81100.eu.org/em/">Emanuele Aina</a>.</p>
+    <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a>.</p>
     </div>
 
     <div id="footer">
