@@ -1063,7 +1063,7 @@
       <a href="mailto:cri@linux.it">Cristian Rigamonti</a> in formato
       DocBook e successivamente riconvertito in 
       <acronym title="eXtensible Hyper Text Markup Language">XHTML</acronym>
-      da <a href="http://81100.eu.org/em/">Emanuele Aina</a>.</p>
+      da <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a>.</p>
     </div>
 
     <div id="copyright">
@@ -1078,8 +1078,8 @@
         <a href="http://validator.w3.org/check/referer">Valid XHTML 1.0 Strict</a>
       </div>
       <div>
-      <a href="http://81100.eu.org/em/">Emanuele Aina</a> - 
-        Sun, 02 Oct 2005 16:39:41 +0200
+      <a href="http://nerd.ocracy.org/em/">Emanuele Aina</a> -
+	  Wed, 10 May 2006 15:57:13 +0200
       </div>
     </div>
   </body>
