@@ -1,3 +1,9 @@
+2006-05-10  Emanuele Aina <emanuele.aina@gmail.com>
+
+	* index.html, buona_traduzione.html, glossario.html,
+	data_ora_valuta.html, procedura_tp.html, progetti_traduzione.html:
+	cambiato il sito di em: 81100.eu.org/em -> nerd.ocracy.org/em
+
 2005-09-05  Emanuele Aina <emanuele.aina@gmail.com>
 
 	* buona_traduzione.html: aggiunto paragrafo su "and/or"
